[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmos pl"
version="0.0.01"
authors=[
    { name="Dean MacGregor", email="powertrading121@gmail.com"}
]
description="An alternative Azure Cosmos library with orjson, polars, and fastapi in mind"
readme = "README.md"
requires-python = ">=3.8"
dependencies=[
    "httpx",
    "orjson",
    "polars
    ]
